--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "슬리액(슬랙) 클론 코딩 입니다.",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack",
+    "dev": "TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve --env development",
+    "build": "TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" NODE_ENV=production webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/preset-env": "^7.22.10",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "css-loader": "^6.8.1",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-refresh": "^0.14.0",
     "react-router-dom": "^6.15.0",
     "style-loader": "^3.3.3",
     "ts-node": "^10.9.1",
@@ -28,6 +32,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@types/node": "^20.5.3",
     "@types/webpack": "^5.28.2",
+    "@types/webpack-dev-server": "^4.7.2",
     "babel-loader": "^9.1.3",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
