--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "esnext",
     "moduleResolution": "Node",
     "target": "es5",
+    "forceConsistentCasingInFileNames" : false,
     "strict": true,
     "resolveJsonModule": true,
     "baseUrl": ".",
