--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.15.0",
     "style-loader": "^3.3.3",
+    "swr": "^2.2.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
