Style: 워크스페이스 레이아웃

--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@emotion/styled": "^11.11.0",
     "@loadable/component": "^5.15.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@types/gravatar": "^1.8.3",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
     "css-loader": "^6.8.1",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "gravatar": "^1.8.2",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
